issue fixed #19866 Configurable product grid legend label overlapping to each other
issue fixed #19866 Configurable product grid legend label overlapping to each other

--- a/app/design/adminhtml/Magento/backend/Magento_Customer/web/css/source/_module.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Customer/web/css/source/_module.less
@@ -3,11 +3,18 @@
 //  * See COPYING.txt for license details.
 //  */
 
+.data-grid{
+	.admin__field {
+	    legend {
+	        &.admin__field-label {
+	            opacity: 0;
+	        }
+	    }
+	}
+}
+
 .customer_form_areas_address_address_customer_address_update_modal_update_customer_address_form_loader {
     .admin__field {
-        legend {
-            &.admin__field-label {
-                opacity: 0;
         .admin__field {
             .admin__field-label {
                 background: none;
